tests/bonsai/error/mismatched_types.bonsai
func foo() -> void {
    x: i32 = 1;
    y: f32 = 2.0;
    z = x + y;
}
